--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,6 @@ plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    // JSON
+    id 'com.google.devtools.ksp' version '1.8.0-1.0.8' apply false
 }
